--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
   <head><title> TypeScript Greeter </title></head>
   <body>
-    <script src='greeter.js'></script>
+    <script src='js/app.js'></script>
   </body>
 </html>
