--- a/index.html
+++ b/index.html
@@ -1,7 +1,17 @@
 <!DOCTYPE html>
 <html>
-  <head><title> TypeScript Greeter </title></head>
+  <head>
+  <title> TypeScript Greeter </title>
+	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+	<link rel="stylesheet" href="bower_components/bootstrap_dropdowns_enhancement/dist/css/dropdowns-enhancement.css">
+	<link rel="stylesheet" href="style/style.css">
+	<link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+	<script src="bower_components/underscore/underscore.js"></script>
+	<script src="bower_components/backbone/backbone.js"></script>
+	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
+  </head>
   <body>
-    <script src='js/app.js'></script>
+
   </body>
 </html>
