Titel panel functional

--- a/index.html
+++ b/index.html
@@ -16,9 +16,11 @@
 	<script src="js/build/app.js"></script>
   </head>
   <body>
-  <div id="siteContainer">
+  <div id="navContainer">
       
   </div>
-  <div id="content"></div>
+  <div class="container">
+      <div id="content"></div>
+  </div>
   </body>
 </html>
