--- a/index.html
+++ b/index.html
@@ -14,29 +14,13 @@
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	<script src="js/libs/backbone-eventable/backbone-eventable.js"></script>
 	<script src="js/build/app.js"></script>
-    <script>
-        window.bootstrappable = {
-            "FOO" : [
-                {
-                    "id" : 1,
-                    "name" : "Troddledoo",
-                    "ParentName" : "FoobarBaz"
-                },
-                {
-                    "id" : 2,
-                    "name" : "FiddelidooDoo",
-                    "ParentName" : "BaziBarDoo"
-                }
-            ]
-        }
-    </script>
   </head>
   <body>
   <div id="navContainer">
       
   </div>
   <div class="container">
-      <div id="content"></div>
+      <!--<div id="content"></div>-->
   </div>
   </body>
 </html>
