--- a/index.html
+++ b/index.html
@@ -15,11 +15,10 @@
 	<script src="js/libs/backbone-eventable/backbone-eventable.js"></script>
 	<script src="js/build/app.js"></script>
   </head>
-  <body>
+  <body class="log-in-bg">
   <div id="navContainer">
-      
   </div>
-  <div class="container">
+  <div class="app-container">
       <!--<div id="content"></div>-->
   </div>
   </body>
