--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<script src="bower_components/backbone/backbone.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	<script src="js/libs/backbone-eventable/backbone-eventable.js"></script>
-	<script src="js/build/app.js"></script>
+	<script src="js/build/app.min.js"></script>
   </head>
   <body class="log-in-bg">
   <div id="navContainer">
