removed bg image for now

--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 	<script src="js/libs/backbone-eventable/backbone-eventable.js"></script>
 	<script src="js/build/app.min.js"></script>
   </head>
-  <body class="log-in-bg">
-  <div id="navContainer">
-  </div>
+  <body>
   <div class="app-container">
       <!--<div id="content"></div>-->
   </div>
