--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
 	<script src="bower_components/backbone/backbone.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	<script src="js/libs/backbone-eventable/backbone-eventable.js"></script>
-	<script src="js/build/app.min.js"></script>
+	<script src="js/build/app.js"></script>
   </head>
   <body>
-  <div class="app-container">
-      <!--<div id="content"></div>-->
-  </div>
+      <div class="nav">
+          
+      </div>
+      <div id="content">
+          <div class="app-container">
+              <!--<div id="content"></div>-->
+          </div>
+      </div>
   </body>
 </html>
