added editor layout

--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2">
   <title> Mobile Test </title>
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
+    <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
+    <link href="bower_components/jquery-ui-layout-bower/source/stable/layout-default.css" rel="stylesheet">
 	<link rel="stylesheet" href="style/style.css">
-	<link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
+    <script src="bower_components/jquery-ui-layout-bower/source/stable/jquery.layout.min.js"></script>
 	<script src="bower_components/underscore/underscore.js"></script>
 	<script src="bower_components/backbone/backbone.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
@@ -17,11 +20,11 @@
   </head>
   <body>
       <div class="nav">
-          
+
       </div>
       <div id="content">
           <div class="app-container">
-              <!--<div id="content"></div>-->
+
           </div>
       </div>
   </body>
