--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
 	<link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
 	<link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+    <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
 	<script src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
-    <script src="bower_components/jquery-ui-layout-bower/source/stable/jquery.layout.min.js"></script>
 	<script src="bower_components/underscore/underscore.js"></script>
 	<script src="bower_components/backbone/backbone.js"></script>
 	<script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
 	<script src="js/libs/backbone-eventable/backbone-eventable.js"></script>
+    <script src="bower_components/threejs/build/three.min.js"></script>
+    <script src="js/libs/threejs/Detector.js"></script>
+    <script src="bower_components/stats.js/build/stats.min.js"></script>
+    <script src="js/libs/threejs/OrbitControls.js"></script>
+    <script src="bower_components/dat-gui/build/dat.gui.min.js"></script>
 	<script src="js/build/app.js"></script>
   </head>
   <body>
