--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <title> Aegir </title>
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="bower_components/layout/source/stable/layout-default.css"/>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+    <link rel="stylesheet" href="style/style.css">
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
+    <script src="bower_components/layout/source/stable/jquery.layout.min.js"></script>
     <script src="bower_components/underscore/underscore.js"></script>
     <script src="bower_components/backbone/backbone.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
@@ -23,7 +26,8 @@
 </head>
 
 <body>
-    <div class="topbar">
+    <div id="topbar-content">
+    
     </div>
     <div id="editor-content">
         <div class="ui-layout-center" id="fooo">
