--- a/index.html
+++ b/index.html
@@ -30,28 +30,42 @@
     
     </div>
     <div id="editor-content">
-        <div class="ui-layout-center" id="fooo">
+        <div class="ui-layout-center" id="ui-layout-center">
         </div>
         <div class="ui-layout-east">
-            <div id="right-ui-layout-north">
-            </div>
-            <div id="right-ui-layout-center">
-            </div>
-            <div id="right-ui-layout-south">
+            <div class="full-size-container">
+                <div id="right-ui-layout-north">
+                    <div class="layout-full-size-container"></div>
+                </div>
+                <div id="right-ui-layout-center">
+                    <div class="layout-full-size-container"></div>
+                </div>
+                <div id="right-ui-layout-south">
+                    <div class="layout-full-size-container"></div>
+                </div>
             </div>
         </div>
         <div class="ui-layout-west">
-            <div id="left-ui-layout-north">
-            </div>
-            <div id="left-ui-layout-center">
+            <div class="full-size-container">
+                <div id="left-ui-layout-north">
+                    <div class="layout-full-size-container"></div>
+                </div>
+                <div id="left-ui-layout-center">
+                    <div class="layout-full-size-container"></div>
+                </div>
             </div>
         </div>
         <div class="ui-layout-south">
-            <div id="bottom-ui-layout-center">
-            </div>
-            <div id="bottom-ui-layout-east">
-            </div>
-            <div id="bottom-ui-layout-west">
+            <div class="full-size-container">
+                <div id="bottom-ui-layout-center">
+                    <div class="layout-full-size-container"></div>
+                </div>
+                <div id="bottom-ui-layout-east">
+                    <div class="layout-full-size-container"></div>
+                </div>
+                <div id="bottom-ui-layout-west">
+                    <div class="layout-full-size-container"></div>
+                </div>
             </div>
         </div>
     </div>
