--- a/index.html
+++ b/index.html
@@ -30,43 +30,39 @@
     
     </div>
     <div id="editor-content">
-        <div class="ui-layout-center" id="ui-layout-center">
+        <div class="ui-layout-center" id ="fooo">
+            <div id="mainLayoutCenterPane" class="full-space-wrapper">
+            </div>
+        </div>
+        <div class="ui-layout-north">
+            <div id="mainLayoutNorthPane" class="full-space-wrapper">
+            </div>
+        </div>
+        <div class="ui-layout-south">
+            <div id="mainLayoutSouthPane" class="full-space-wrapper">
+                    <div id="bottom-ui-layout-center">
+                        <div id="mainLayoutCenterContent"></div>
+                    </div>
+                    <div id="bottom-ui-layout-east">
+                        <div id="mainLayoutEastContent"></div>
+                    </div>
+                    <div id="bottom-ui-layout-west">
+                        <div id="mainLayoutWestContent"></div>
+                    </div>
+            </div>
         </div>
         <div class="ui-layout-east">
-            <div class="full-size-container">
+            <div id="mainLayoutEastPane" class="full-space-wrapper">
                 <div id="right-ui-layout-north">
-                    <div class="layout-full-size-container"></div>
                 </div>
                 <div id="right-ui-layout-center">
-                    <div class="layout-full-size-container"></div>
                 </div>
                 <div id="right-ui-layout-south">
-                    <div class="layout-full-size-container"></div>
                 </div>
             </div>
         </div>
         <div class="ui-layout-west">
-            <div class="full-size-container">
-                <div id="left-ui-layout-north">
-                    <div class="layout-full-size-container"></div>
-                </div>
-                <div id="left-ui-layout-center">
-                    <div class="layout-full-size-container"></div>
-                </div>
-            </div>
-        </div>
-        <div class="ui-layout-south">
-            <div class="full-size-container">
-                <div id="bottom-ui-layout-center">
-                    <div class="layout-full-size-container"></div>
-                </div>
-                <div id="bottom-ui-layout-east">
-                    <div class="layout-full-size-container"></div>
-                </div>
-                <div id="bottom-ui-layout-west">
-                    <div class="layout-full-size-container"></div>
-                </div>
-            </div>
+            <div id="mainLayoutWestPane" class="full-space-wrapper"></div>
         </div>
     </div>
 </body>
