--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
         </div>
         <div class="ui-layout-west">
             <div id="mainLayoutWestPane" class="full-space-wrapper">
-<!--                 <div id="left-ui-layout-north">
+                <div id="left-ui-layout-north">
                     <div class="layout-full-size-container"></div>
                 </div>
                 <div id="left-ui-layout-center">
                     <div class="layout-full-size-container"></div>
-                </div> -->
+                </div>
             </div>
         </div>
     </div>
