--- a/index.html
+++ b/index.html
@@ -37,23 +37,26 @@
         <div class="ui-layout-south">
             <div id="mainLayoutSouthPane" class="full-space-wrapper">
                     <div id="bottom-ui-layout-center">
-                        <div id="mainLayoutCenterContent"></div>
+                        <div class="layout-full-size-container"></div>
                     </div>
                     <div id="bottom-ui-layout-east">
-                        <div id="mainLayoutEastContent"></div>
+                        <div class="layout-full-size-container"></div>
                     </div>
                     <div id="bottom-ui-layout-west">
-                        <div id="mainLayoutWestContent"></div>
+                        <div class="layout-full-size-container"></div>
                     </div>
             </div>
         </div>
         <div class="ui-layout-east">
             <div id="mainLayoutEastPane" class="full-space-wrapper">
                 <div id="right-ui-layout-north">
+                    <div class="layout-full-size-container"></div>
                 </div>
                 <div id="right-ui-layout-center">
+                    <div class="layout-full-size-container"></div>
                 </div>
                 <div id="right-ui-layout-south">
+                    <div class="layout-full-size-container"></div>
                 </div>
             </div>
         </div>
