--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
     <div id="editor-content">
         <div class="ui-layout-center" id ="fooo">
-            <div id="mainLayoutCenterPane" class="full-space-wrapper">
+            <div class="layout-full-size-container">
             </div>
         </div>
         <div class="ui-layout-south">
