--- a/index.html
+++ b/index.html
@@ -68,6 +68,9 @@
                 <div id="left-ui-layout-center">
                     <div class="layout-full-size-container"></div>
                 </div>
+                <div id="left-ui-layout-south">
+                    <div class="layout-full-size-container"></div>
+                </div>
             </div>
         </div>
     </div>
