--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="bower_components/font-awesome/css/font-awesome.css" rel="stylesheet">
     <link rel="stylesheet" href="bower_components/layout/source/stable/layout-default.css"/>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
+    <link rel="stylesheet" href="bower_components/toastr/toastr.min.css" />
     <link rel="stylesheet" href="style/style.css">
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -22,6 +23,7 @@
     <script src="bower_components/stats.js/build/stats.min.js"></script>
     <script src="js/libs/threejs/OrbitControls.js"></script>
     <script src="bower_components/dat-gui/build/dat.gui.min.js"></script>
+    <script src="bower_components/toastr/toastr.min.js"></script>
     <script src="js/build/app.js"></script>
 </head>
 
