--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="bower_components/layout/source/stable/layout-default.css"/>
     <link rel="stylesheet" href="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css" />
     <link rel="stylesheet" href="bower_components/toastr/toastr.min.css" />
+    <link rel="stylesheet" href="bower_components/bootstrap-sweetalert/lib/sweet-alert.css" />
     <link rel="stylesheet" href="style/style.css">
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
@@ -24,6 +25,7 @@
     <script src="js/libs/threejs/OrbitControls.js"></script>
     <script src="bower_components/dat-gui/build/dat.gui.min.js"></script>
     <script src="bower_components/toastr/toastr.min.js"></script>
+    <script src="bower_components/bootstrap-sweetalert/lib/sweet-alert.min.js"></script>
     <script src="js/build/app.js"></script>
 </head>
 
@@ -74,6 +76,9 @@
         </div>
     </div>
     <div id="statusbar-wrapper">
+    </div>
+    <div id="modals-container">
+
     </div>
 </body>
 
