Add new project

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="bower_components/toastr/toastr.min.css" />
     <link rel="stylesheet" href="bower_components/bootstrap-sweetalert/lib/sweet-alert.css" />
     <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="bower_components/selectize/dist/css/selectize.bootstrap3.css" />
     <script src="http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
     <script src="bower_components/jquery/dist/jquery.min.js"></script>
     <script src="bower_components/jquery-ui/jquery-ui.min.js"></script>
@@ -26,6 +27,7 @@
     <script src="bower_components/dat-gui/build/dat.gui.min.js"></script>
     <script src="bower_components/toastr/toastr.min.js"></script>
     <script src="bower_components/bootstrap-sweetalert/lib/sweet-alert.min.js"></script>
+    <script src="bower_components/selectize/dist/js/standalone/selectize.min.js"></script>
     <script src="js/build/app.js"></script>
 </head>
 
