Render ship and use flexbox for nav control

--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
     <script src="bower_components/backbone/backbone.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
     <script src="js/libs/backbone-eventable/backbone-eventable.js"></script>
+    <!-- Three JS -->
     <script src="bower_components/threejs/build/three.min.js"></script>
     <script src="js/libs/threejs/Detector.js"></script>
-    <script src="bower_components/stats.js/build/stats.min.js"></script>
     <script src="js/libs/threejs/OrbitControls.js"></script>
+    <script src="js/libs/threejs/OBJLoader.js"></script>
+    <script src="bower_components/stats.js/build/stats.min.js"></script>
+    <!-- Property Editor -->
     <script src="bower_components/dat-gui/build/dat.gui.min.js"></script>
+    <!-- Growl Like notifications-->
     <script src="bower_components/toastr/toastr.min.js"></script>
+    <!-- Confirmation popup dialog-->
     <script src="bower_components/bootstrap-sweetalert/lib/sweet-alert.min.js"></script>
     <script src="bower_components/selectize/dist/js/standalone/selectize.min.js"></script>
     <script src="js/build/app.js"></script>
